[tool.poetry]
name = "rl_hub"
version = "0.1.0"
description = "The ultimate resource to learn Reinforcement Learning."
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"
torch = "^2.5"
torchvision = "^0.20"
gymnasium = "^1.0"
wandb = "^0.18.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"


[tool.poetry.group.notebook.dependencies]
notebook = "^7.2.2"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
